:bug: Fixed right white space on mobile by aos

--- a/Views/pages/css/menu.css
+++ b/Views/pages/css/menu.css
@@ -92,8 +92,8 @@
 
 @media(max-width: 726.9px) {
 
-    header.inative > #white-nav ul,
-    header.inative > #green-nav
+    header.inative #white-nav ul,
+    header.inative #green-nav
     {
         display: none;
     }
